[project]
name = "comfyui-usgromana"
description = "The next-generation security, governance, permissions, and multi‑user control system for ComfyUI."
version = "0.11.3"
license = {file = "LICENSE"}
dependencies = ["aiohttp", "PyJWT", "bcrypt", "bleach"]

[project.urls]
Repository = "https://github.com/DayMan84/ComfyUI-Usgromana"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "DayMan84"
DisplayName = "ComfyUI-Usgromana"

Icon = "https://raw.githubusercontent.com/DayMan84/ComfyUI-Usgromana/refs/heads/main/icon.png"

