[project]
name = "ComfyUI-Usgromana"
description = "The next-generation security, governance, permissions, and multi‑user login control system for ComfyUI."
version = "1.7.3"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["aiohttp", "PyJWT", "bcrypt", "bleach"]

[project.urls]
Repository = "https://github.com/DayMan84/ComfyUI-Usgromana"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DayMan84/ComfyUI-Usgromana/wiki"
"Bug Tracker" = "https://github.com/DayMan84/ComfyUI-Usgromana/issues"

[tool.comfy]
PublisherId = "dayman84"
DisplayName = "ComfyUI-Usgromana"
Icon = "https://raw.githubusercontent.com/DayMan84/ComfyUI-Usgromana/refs/heads/main/web/assets/dark_logo_transparent.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

